# anolisa

./: .gitignore
src/agent-sec-core/openclaw-plugin/scripts/: deploy.sh
src/ws-ckpt/: README.md  build-rpm.sh  ws-ckpt.spec.in
src/ws-ckpt/docs/: RPM-PACKAGING.md
src/ws-ckpt/src/: Cargo.toml  config.toml
src/ws-ckpt/src/crates/cli/: Cargo.toml
src/ws-ckpt/src/crates/cli/src/: main.rs
src/ws-ckpt/src/crates/common/: Cargo.toml
src/ws-ckpt/src/crates/common/src/: backend.rs  lib.rs  migration.rs  persist.rs
src/ws-ckpt/src/crates/daemon/: Cargo.toml
src/ws-ckpt/src/crates/daemon/src/: backend_detect.rs  bootstrap.rs  dispatcher.rs  index_store.rs  lib.rs  lockfile.rs  scheduler.rs  snapshot_mgr.rs  startup.rs  state.rs  util.rs  workspace_mgr.rs
src/ws-ckpt/src/crates/daemon/src/backends/: btrfs_common.rs  btrfs_loop.rs
src/ws-ckpt/src/crates/daemon/tests/: protocol_integration.rs
src/ws-ckpt/src/plugins/openclaw/: README.md  package-lock.json  package.json
src/ws-ckpt/src/plugins/openclaw/src/: handlers.ts
src/ws-ckpt/src/systemd/: ws-ckpt.service
