[package]
name = "ws-ckpt-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ws-ckpt"
path = "src/main.rs"

[dependencies]
ws-ckpt-common = { path = "../common" }
ws-ckpt-daemon = { path = "../daemon" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
anyhow = "1"
serde_json = "1"
toml = "0.8"
